Add cursor options for radio buttons, alternate background colors

--- a/skeleton/example.html
+++ b/skeleton/example.html
@@ -101,11 +101,11 @@
         <input id="name" type="text" name="name">
 
         <label for="rating">Rating</label>
-        1<input type="radio" name="rating" value="1" checked>
-        2<input type="radio" name="rating" value="2">
-        3<input type="radio" name="rating" value="3">
-        4<input type="radio" name="rating" value="4">
-        5<input type="radio" name="rating" value="5">
+        <label class="star"> <input type="radio" name="rating" value="1" checked > <img src="./assets/stars.png" alt="star"> </label>
+        <label class="star" > <input type="radio" name="rating" value="2" > <img src="./assets/stars.png" alt="star"> </label>
+        <label class="star" > <input type="radio" name="rating" value="3" > <img src="./assets/stars.png" alt="star"> </label>
+        <label class="star" > <input type="radio" name="rating" value="4" > <img src="./assets/stars.png" alt="star"> </label>
+        <label class="star" > <input type="radio" name="rating" value="5" > <img src="./assets/stars.png" alt="star"> </label>
 
         <label for="expertise">Cooking Expertise</label>
 
